Add kwic endpoints
